--- a/controller_rocky/manifests/params.pp.template
+++ b/controller_rocky/manifests/params.pp.template
@@ -9,9 +9,6 @@ class controller_rocky::params ($cloud_role){
    $cv_site_fqdn = "cloudveneto.ict.unipd.it"
    $admin_password = ''
    $admin_token = ''
-   ## FF da queens nova_keystone_authtoken e nova_placement_auth_url cambiano porte da 35357 a 5000 
-   $nova_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
-   $nova_placement_auth_url = 'http://xxx.xxx.xxx.xxx:5000/v3'
    $auth_uri = 'http://xxx.xxx.xxx.xxx:5000'
    $auth_url = 'http://xxx.xxx.xxx.xxx:35357'
    #########
@@ -35,14 +32,15 @@ class controller_rocky::params ($cloud_role){
    $glance_api_rbd_store_user = ''
    $glance_api_servers = ''
    $glance_db = ''
-   ## FF in queens la porta e' 5000 per glance
-   ## FF in rocky [keystone_authtoken] auth_uri diventa www_authenticate_uri
-   $glance_www_authenticate_uri = 'http://xxx.xxx.xxx.xxx:5000'
-   $glance_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
+   ## FF da queens per glance [keystone_authtoken] auth_url gira sulla porta 5000
+   $glance_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
    $glance_password = ''
    $keystone_admin_endpoint =  ''
    $keystone_db =  ''
    $keystone_public_endpoint =  ''
+   ## FF in rocky [keystone_authtoken] auth_uri diventa www_authenticate_uri
+   $www_authenticate_uri = 'http://xxx.xxx.xxx.xxx:5000'
+   ##
    $heat_db = ''
    $heat_metadata_server_url = ''
    $heat_password = ''
@@ -53,16 +51,26 @@ class controller_rocky::params ($cloud_role){
    $metadata_proxy_shared_secret = '' 
    $ml2_network_vlan_ranges = '' 
    $ml2_bridge_mappings = ''
+   ## FF in rocky in nova [neutron] auth_url passa da 35357 a 5000
+   $neutron_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
    $neutron_db = ''
    $neutron_password = ''
-   # FF  DEPRECATED in ROCKY [neutron]url diventa [neutron]endpoint_override
+   # FF  DEPRECATED in ROCKY in  nova [neutron]url diventa [neutron]endpoint_override
    #$neutron_url = ''
    $neutron_endpoint_override = ''
+   ##FF in rocky per neutron [keystone_authtoken] auth_url passa da 35357 a 5000
+   $neutron_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000' 
    ###
    $nova_api_db = ''
    $nova_cinder_endpoint_template = ''
    $nova_db = ''
    $nova_password = ''
+   ## FF da queens nova_keystone_authtoken e nova_placement_auth_url cambiano porte da 35357 a 5000 
+   $nova_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
+   $nova_placement_auth_url = 'http://xxx.xxx.xxx.xxx:5000/v3'
+   ## FF in rocky si puo' creare il DB placement, con relativa connection url. Se non viene creato si continua ad usare solo il nova_api db
+   #$nova_placement_db = '' }
+   ###
    $nova_disk_allocation_ratio = ''
    $nova_ram_allocation_ratio = ''
    $private_key = ''
@@ -100,9 +108,6 @@ class controller_rocky::params ($cloud_role){
    $cv_site_fqdn = "cloudveneto-test.ict.unipd.it"
    $admin_password = ''
    $admin_token = ''
-   ## FF da queens nova_keystone_authtoken e nova_placement_auth_url cambiano porte da 35357 a 5000 
-   $nova_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
-   $nova_placement_auth_url = 'http://xxx.xxx.xxx.xxx:5000/v3'
    $auth_uri = 'http://xxx.xxx.xxx.xxx:5000'
    $auth_url = 'http://xxx.xxx.xxx.xxx:35357'
    #########
@@ -129,10 +134,8 @@ class controller_rocky::params ($cloud_role){
    $glance_db = ''
    $glance_api_servers = ''
    $glance_password = ''
-   ## FF in queens la porta e' 5000 per glance
-   ## FF in rocky [keystone_authtoken] auth_uri diventa www_authenticate_uri
-   $glance_www_authenticate_uri = 'http://xxx.xxx.xxx.xxx:5000'
-   $glance_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
+   ## FF da queens [keystone_authtoken] auth_url gira sulla porta 5000
+   $glance_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
 ###ceph
    $glance_api_rbd_store_pool = ''
    $glance_api_rbd_store_user = ''
@@ -140,6 +143,8 @@ class controller_rocky::params ($cloud_role){
    $keystone_admin_endpoint =  ''
    $keystone_db =  ''
    $keystone_public_endpoint =  ''
+   ## FF in rocky [keystone_authtoken] auth_uri diventa www_authenticate_uri
+   $www_authenticate_uri = 'http://xxx.xxx.xxx.xxx:5000'
    $heat_db = ''    
    $heat_metadata_server_url = ''
    $heat_password = ''
@@ -149,16 +154,26 @@ class controller_rocky::params ($cloud_role){
    $memcached_servers_horizon = ''
    $metadata_proxy_shared_secret = ''
    $ml2_bridge_mappings = 'external:br-ex'
+   ## FF in rocky [neutron] auth_url passa da 35357 a 5000
+   $neutron_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
    $neutron_db = ''
    $neutron_password = ''
    ### FF DEPRECATED in ROCKY [neutron]url diventa [neutron]endpoint_override 
    #$neutron_url = ''
    $neutron_endpoint_override = ''
+   ##FF in rocky per neutron [keystone_authtoken] auth_url passa da 35357 a 5000
+   $neutron_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000' 
    ###
    $nova_api_db = ''
    $nova_cinder_endpoint_template = ''
    $nova_db = ''
    $nova_password = ''
+   ## FF da queens nova_keystone_authtoken e nova_placement_auth_url cambiano porte da 35357 a 5000 
+   $nova_keystone_authtoken_auth_url = 'http://xxx.xxx.xxx.xxx:5000'
+   $nova_placement_auth_url = 'http://xxx.xxx.xxx.xxx:5000/v3'
+   ## FF in rocky si puo' creare il DB placement, con relativa connection url. Se non viene creato si continua ad usare solo il nova_api db
+   #$nova_placement_db = '' }
+   ###
    $nova_disk_allocation_ratio = ''
    $nova_ram_allocation_ratio = ''
    $private_key = ''
@@ -244,6 +259,13 @@ class controller_rocky::params ($cloud_role){
    $ec2_my_ip = $vip_mgmt
    $ec2_nova_metadata_ip = $vip_mgmt
    $ec2_verbose = false
+   ## FF da queens in poi
+   #$ec2_port = ''
+   #$ec2api_listen_port = ''
+   #$ec2_api_paste_config = ''
+   #$ec2_disable_ec2_classic = ''
+   #$ec2_nova_metadata_port = ''
+   ###
    $eqlog_eqlx_group_name = 'CloudUnipdVeneto'
    $eqlog_eqlx_pool = 'default'
    $eqlog_san_ip = ''
