Changes for keystone on 443

--- a/controller_rocky/manifests/params.pp.template
+++ b/controller_rocky/manifests/params.pp.template
@@ -7,6 +7,8 @@ class controller_rocky::params ($cloud_role){
    # Cloud di produzione
    $site_fqdn = "cloud-areapd.pd.infn.it"
    $cv_site_fqdn = "cloudveneto.ict.unipd.it"
+   $keystone_cap_fqdn = "keystone-cv.pd.infn.it"
+   $keystone_cv_fqdn = "keystone-cv.ict.unipd.it"
    $admin_password = ''
    $admin_token = ''
    $auth_uri = 'http://xxx.xxx.xxx.xxx:5000'
@@ -107,6 +109,8 @@ class controller_rocky::params ($cloud_role){
    # Cloud di test
    $site_fqdn = "cloud-areapd-test.pd.infn.it"
    $cv_site_fqdn = "cloudveneto-test.ict.unipd.it"
+   $keystone_cap_fqdn = "keystone-cv-test.pd.infn.it"
+   $keystone_cv_fqdn = "keystone-cv-test.ict.unipd.it"
    $admin_password = ''
    $admin_token = ''
    $auth_uri = 'http://xxx.xxx.xxx.xxx:5000'
@@ -397,6 +401,10 @@ class controller_rocky::params ($cloud_role){
   $host_key = "/etc/grid-security/infn-key.pem"
   $unipd_cert = "/etc/grid-security/unipd-cert.pem"
   $unipd_key = "/etc/grid-security/unipd-key.pem"
+  $keystone_infn_cert = "/etc/grid-security/keystone-infn-cert.pem"
+  $keystone_infn_key = "/etc/grid-security/keystone-infn-key.pem"
+  $keystone_unipd_cert = "/etc/grid-security/keystone-unipd-cert.pem"
+  $keystone_unipd_key = "/etc/grid-security/keystone-unipd-key.pem"
   $crl_file_list = []
 
   ############################################################################
