Optimization since the ceph pool is used only for cinder

--- a/controller_rocky/manifests/params.pp.template
+++ b/controller_rocky/manifests/params.pp.template
@@ -239,6 +239,7 @@ class controller_rocky::params ($cloud_role){
    $ceph_volume_backend_name = 'ceph'
    $ceph_volume_driver = 'cinder.volume.drivers.rbd.RBDDriver'
    $ceph_volume_group = 'ceph'
+   $cinder_ceph_rbd_exclusive_cinder_pool = true
    $cinder_default_volume_type = 'ceph'
    $cinder_enabled_backends = 'ceph,iscsi-infnpd'
    $cinder_glusterfs_shares_config = '/etc/cinder/shares'
