auth_uri deprecated. Use option "www_authenticate_uri new policy file for cinder

--- a/controller_rocky/files/cinder_policy.yaml
+++ b/controller_rocky/files/cinder_policy.yaml
@@ -1,40 +1,67 @@
-# Default rule for most non-Admin APIs.
-"admin_or_owner": "is_admin:True or (role:admin and is_admin_project:True) or project_id:%(project_id)s"
+# 
+# To be used when another member of the same project can't change something
+# created by another user of the same project
+"admin_or_user":  "is_admin:True or (role:admin and is_admin_project:True) or user_id:%(user_id)s"
 
-# Define non-standard role for the CloudVeneto platform
-"admin_or_user": "is_admin:True or (role:admin and is_admin_project:True) or user_id:%(user_id)s"
-
-# Use the newly created role as default
-"default": "rule:admin_or_user"
-
-# Decides what is required for the 'is_admin:True' check to succeed.
-"context_is_admin": "role:admin"
-
-# Default rule for most Admin APIs.
-"admin_api": "is_admin:True or (role:admin and is_admin_project:True)"
-
-# Reset status of group snapshot.
-# POST  /group_snapshots/{g_snapshot_id}/action (reset_status)
-"group:reset_group_snapshot_status": "rule:admin_api"
-
-# Delete volume.
-# DELETE  /volumes/{volume_id}
-"volume:delete": "rule:admin_or_user"
+# Update snapshot.
+# PUT  /snapshots/{snapshot_id}
+"volume:update_snapshot": "rule:admin_or_user"
 
 # Delete snapshot.
 # DELETE  /snapshots/{snapshot_id}
 "volume:delete_snapshot": "rule:admin_or_user"
 
+# Extend a volume.
+# POST  /volumes/{volume_id}/action (os-extend)
+"volume:extend": "rule:admin_or_user"
+
+# Extend a attached volume.
+# POST  /volumes/{volume_id}/action (os-extend)
+"volume:extend_attached_volume": "rule:admin_or_user"
+
+# Revert a volume to a snapshot.
+# POST  /volumes/{volume_id}/action (revert)
+"volume:revert_to_snapshot": "rule:admin_or_user"
+
+# Retype a volume.
+# POST  /volumes/{volume_id}/action (os-retype)
+"volume:retype": "rule:admin_or_user"
+
+# Update a volume's readonly flag.
+# POST  /volumes/{volume_id}/action (os-update_readonly_flag)
+"volume:update_readonly_flag": "rule:admin_or_user"
+
+# Mark volume as reserved.
+# POST  /volumes/{volume_id}/action (os-reserve)
+"volume_extension:volume_actions:reserve": "rule:admin_or_user"
+
+# Unmark volume as reserved.
+# POST  /volumes/{volume_id}/action (os-unreserve)
+"volume_extension:volume_actions:unreserve": "rule:admin_or_user"
+
+# Update volume.
+# PUT  /volumes
+"volume:update": "rule:admin_or_user"
+
+# Delete volume.
+# DELETE  /volumes/{volume_id}
+"volume:delete": "rule:admin_or_user" 
+
+# Update snapshot's metadata or one specified metadata with a given
+# key.
+# PUT  /snapshots/{snapshot_id}/metadata
+# PUT  /snapshots/{snapshot_id}/metadata/{key}
+"volume:update_snapshot_metadata": "rule:admin_or_user"
+
 # Delete snapshot's specified metadata with a given key.
 # DELETE  /snapshots/{snapshot_id}/metadata/{key}
-"volume:delete_snapshot_metadata": "rule:admin_or_user"
+"volume:delete_snapshot_metadata": "rule:admin_or_user" 
+
+# Update volume's metadata or one specified metadata with a given key.
+# PUT  /volumes/{volume_id}/metadata
+# PUT  /volumes/{volume_id}/metadata/{key}
+"volume:update_volume_metadata": "rule:admin_or_user"
 
 # Delete volume's specified metadata with a given key.
 # DELETE  /volumes/{volume_id}/metadata/{key}
-"volume:delete_volume_metadata": "rule:admin_or_user"
-
-# Show project quota (including usage and default).
-# GET  /os-quota-sets/{project_id}
-# GET  /os-quota-sets/{project_id}/default
-# GET  /os-quota-sets/{project_id}?usage=True
-"volume_extension:quotas:show": "rule:admin_or_owner"
+"volume:delete_volume_metadata": "rule:admin_or_user" 
