--- a/controller_rocky/manifests/params.pp.template
+++ b/controller_rocky/manifests/params.pp.template
@@ -462,6 +462,7 @@ class controller_rocky::params ($cloud_role){
         "metadata"    => "https://dodas-iam.cloud.cnaf.infn.it/.well-known/openid-configuration",
         "iss"         => "https://dodas-iam.cloud.cnaf.infn.it/oidc/",
         "descr"       => "DODAS IAM",
+        "map_tag"     => "dodas_sso",
         "map_local"   => "[{\"user\" : {\"name\" : \"{0}\", \"type\" : \"ephemeral\", \"email\" : \"{1}\" }, \"group\" : { \"id\" : \"*****\" }}]",
         "map_remote"  => "[{ \"type\" : \"OIDC-preferred_username\" }, { \"type\" : \"OIDC-email\" }]",
         "clients"     => {
